[metadata]
name = dict
version = 1.0.2
project_urls = 
	Homepage = https://github.com/looking-for-a-job/dict.py	
	Bug Tracker = https://github.com/looking-for-a-job/dict.py/issues
classifiers = file: .data/pypi.org/classifiers.txt
description = dict replacement
long_description = file: .data/pypi.org/README.md
long_description_content_type = text/markdown
keywords = dict

[options]
install_requires = 
	public	
	self	
	setuptools
packages = 
	dict


