[metadata]
name = dict
version = 1.0.3
url = https://github.com/looking-for-a-job/dict.py
classifiers = file: .tmp/pypi.org/classifiers.txt
description = dict replacement
long_description = file: .tmp/pypi.org/README.md
long_description_content_type = text/markdown
keywords = dict

[options]
install_requires = 
	public
	self
	setuptools
packages = 
	dict
